Bug 1594067 - Clear the AudioSegment when FlushAfter is called with new end equals to zero. r=padenot

The AudioSegment::FlushAfter with input argument equals to zero is crashing on an assert that indicates misuse of the AudioChunk::SliceTo method. In general MediaSegmentBase::FlushAfter is better to clear itself when is called with argument equals to zero. This avoids the misuse and it is slightly more efficient.

Differential Revision: https://phabricator.services.mozilla.com/D51862

--HG--
extra : moz-landing-system : lando